--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   overflow: hidden;
   width: 300px;
   height: 300px;
-  background-image: url('./usiki.JPG');
+  background-image: url('./lastForTT.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -101,6 +101,8 @@ body {
   position: absolute;
   transform: rotate(0deg);
   transform-origin: 50% 70%;
+  opacity: 0;
+  transition: opacity .4s ease;
   transition: transform .2s ease .2s;
 }
 
@@ -112,13 +114,17 @@ body {
   position: absolute;
   transform: rotate(0deg);
   transform-origin: 50% 130%;
+  opacity: 0;
+  transition: opacity .4s ease;
   transition: transform .2s ease .2s;
 }
 
 .check__animated {
+  opacity: 1;
   transform: rotate(49deg);
 }
 
 .check-after__animated {
+  opacity: 1;
   transform: rotate(-39deg);
 }
